# smart-finances-back

./: .gitignore  CLAUDE.md  CONTACT_MIGRATION_SUMMARY.md  README.md  create_db.py  package-lock.json  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  test.yml
app/: __init__.py
app/config/: database.py  db_base.py  settings.py
app/dependencies/: account_dependencies.py  auth_dependency.py  balance_dependencies.py  balance_snapshot_dependencies.py  balance_strategy_dependencies.py  budget_dependencies.py  category_dependencies.py  concept_dependencies.py  contact_dependencies.py  debt_dependencies.py  installment_dependencies.py  reporting_dependencies.py  tag_dependencies.py  transaction_dependencies.py  user_dependencies.py
app/engines/: __init__.py  balance_engine.py
app/entities/: __init__.py  account.py  balance_snapshot.py  budget.py  budget_category.py  category.py  concept.py  credit.py  group.py  group_member.py  installment.py  recurring_debt.py  recurring_transaction.py  tag.py  tags.py  transaction.py  transaction_tag.py  user.py  user_contact.py  user_debt.py
app/repository/: account_repository.py  balance_snapshot_repository.py  base_repository.py  budget_repository.py  category_repository.py  concept_repository.py  contact_repository.py  debt_repository.py  group_repository.py  installment_repository.py  tag_repository.py  transaction_repository.py  user_repository.py
app/routes/: account_route.py  budget_route.py  category_route.py  concept_route.py  contact_route.py  installment_route.py  reporting_route.py  tag_route.py  transaction_route.py  user_route.py
app/schemas/: account_schemas.py  base_schemas.py  budget_schemas.py  category_schemas.py  concept_schemas.py  contact_schemas.py  installment_schemas.py  reporting_schemas.py  tag_schemas.py  transaction_schemas.py  user_schemas.py
app/services/: account_service.py  (+16 more)
commands/: generate_user_token.py
docs/: BackEndProjectArchitecture.md  BalanceEngineDiagrams.md  BalanceReportingAndSnapshots.md  DatabaseSchema.md  EnginesArchitecture.md  GITHUB_SETUP.md  ProjectScope.md  TEST_DOCUMENTATION.md  contacts_api.md  non_mvp_inventory.md  schema.sql  swagger-v1.json
mcp_server/: __init__.py  auth.py  server.py  service_factory.py  session.py  utils.py
scripts/: check-linting.sh  run-checks.sh
tests/: conftest.py  test_accounts.py  test_categories.py  test_concepts.py  test_contacts.py  test_reporting.py  test_root.py  test_tags.py  test_transaction_repository.py  test_transaction_schemas.py  test_transaction_service.py  test_transactions.py  test_users.py
(+33 files in other folders)
